crates/album/tests/snapshots/contract__entity_as_node.snap
---
source: crates/album/tests/contract.rs
expression: pretty(&got)
---
{
  "core": "album",
  "data": {
    "note": "his own node"
  },
  "home": "csa_john_appleseed",
  "kind": "person",
  "refs": [],
  "slug": "john_appleseed"
}
