crates/album/tests/snapshots/contract__exit_codes.snap
---
source: crates/album/tests/contract.rs
expression: out
---
exit 4: no such slug — no album entity named "nobody" (§7.3)
exit 2: a slug at two nodes — "mara" is at more than one node: csa, cso — name one with -H (§7.3)
exit 2: -c mints nothing — album keeps no series, so -c mints nothing (§7.1, §7.3)
exit 2: -a keys nothing — album keeps no series, so -a keys nothing: an entity is not a sample, and its name is its key (§5.4, §7.1)
exit 2: no series to read — album keeps no series: its tokens are all partitioned, so an agent is read with `get` or `list` (§7.1, §8.1)
exit 2: a token album lacks — album has no "task" token; it declares person, organization, group (§7.1)
exit 2: a name is one token — a name is one token, and 2 were given — did you mean "john_appleseed"? (§5.1, §7.3)
exit 2: add needs a name — name the album record (§7.3)
exit 3: a blank field — --note is blank (§8.1)
exit 3: a malformed away — away period 0 has a malformed from "26060": a day is YYYYMMDD (§5.4)
exit 3: a slug another kind holds — csa already holds "book_club" as a group: two kinds spell two files but only one `album:book_club`, so the ref would be ambiguous (§5.4, §18)
exit 2: a malformed ref — reference "not-a-ref" is not `core:slug`
exit 5: an overwrite, piped — <a pending change>
