crates/album/tests/snapshots/contract__on_disk_cascaded_ref.snap
---
source: crates/album/tests/contract.rs
expression: after.clone()
---
{
  "refs": [
    "album:john"
  ],
  "data": {
    "closeness": "close"
  }
}
