crates/album/tests/snapshots/contract__on_disk_entity_file.snap
---
source: crates/album/tests/contract.rs
expression: raw.clone()
---
{
  "refs": [
    "album:book_club"
  ],
  "data": {
    "closeness": "close"
  }
}
