crates/album/tests/snapshots/contract__refusal_move_entity_node.snap
---
source: crates/album/tests/contract.rs
expression: pretty(&moved)
---
{
  "error": {
    "code": 2,
    "msg": "\"john_appleseed\" is an entity-as-node: its home is its own node, so re-homing it is a node move — use `pan mv csa_john_appleseed --to <code>`. A file mv would strand the node and everything homed at it (§5.5, §7.2, I3)"
  }
}
